objects/zkups__UPSShipmateScheduledJobsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores ZenKraft Shipmate app custom settings for scheduled apex jobs. There should only be one record max per org. Do not create a record manually or edit it manually. Use the interface available on the UPS Shipments Tab.</description>
    <fields>
        <fullName>zkups__ScheduledTrackEndTime__c</fullName>
        <label>Scheduled Track End Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackFrequency__c</fullName>
        <label>Scheduled Track Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackFriTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Fri Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackMonTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Mon Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackSatTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Sat Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackShipmentId__c</fullName>
        <label>Scheduled Track Shipment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackStartTime__c</fullName>
        <label>Scheduled Track Start Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackSunTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Sun Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackThursTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Thurs Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackTuesTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Tues Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledTrackWedTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Wed Tracking</label>
        <type>Checkbox</type>
    </fields>
    <label>UPS Shipmate Scheduled Jobs Settings</label>
</CustomObject>